--- a/src/components/mainScene/style.css
+++ b/src/components/mainScene/style.css
@@ -5,3 +5,40 @@
   background-image: url('/public/assets/image/room.jpg');
   background-size: cover;
 }
+
+.menu-left {
+  z-index: 10;
+  position: fixed;
+  top: 20px;
+  left: 20px;
+  width: 100px;
+  height: 300px;
+  background-color: rgba(0, 0, 0, 0.2);
+  border-radius: 20px;
+}
+
+.menu-right {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  display: block;
+  justify-content: center;
+  z-index: 10;
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  width: 100px;
+  height: 300px;
+  background-color: rgba(0, 0, 0, 0.2);
+  border-radius: 20px;
+}
+
+.menu-item {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.menu-item:hover {
+  cursor: pointer;
+  scale: 1.05;
+  transition: all 0.2s;
+}
