--- a/src/components/mainScene/style.css
+++ b/src/components/mainScene/style.css
@@ -42,3 +42,13 @@
   scale: 1.05;
   transition: all 0.2s;
 }
+
+.handle-scale-area {
+  background-color: rgba(0, 0, 0, 0.2);
+  border-radius: 10%;
+  padding: 10px;
+  margin-top: 50px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
