`add` : set movable limit value

--- a/src/components/mainScene/style.css
+++ b/src/components/mainScene/style.css
@@ -1,9 +1,9 @@
 .canvas-scene {
   width: 100%;
   height: 100vh !important;
-  /* background-color: aqua; */
   background-image: url('/public/assets/image/room.jpg');
-  background-size: cover;
+  background-position: center;
+  background-size: unset 100%
 }
 
 .hint-area {
